@@ -95,7 +95,7 @@ static void do_time(FILE *file)
   struct tm *bd_time;
 
   current_time = get_unique_time_if_given();
-  if (current_time == 0) {
+  if (current_time == INVALID_EPOCH_VALUE) {
     time(&current_time);
     bd_time = localtime(&current_time);
   } else {
